[gd_scene load_steps=6 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=2]
action = "start_game"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 220.0
margin_top = 83.0
margin_right = 265.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="Message" type="Label" parent="."]
margin_left = 45.0
margin_top = 257.0
margin_right = 440.0
margin_bottom = 441.0
custom_fonts/font = SubResource( 1 )
text = "Dodge the 
Creeps!"
align = 1

[node name="StartButton" type="Button" parent="."]
margin_left = 154.0
margin_top = 567.0
margin_right = 334.0
margin_bottom = 651.0
custom_fonts/font = SubResource( 1 )
shortcut = SubResource( 3 )
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="start_game" from="." to="." method="_on_HUD_start_game"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
